FORSLAG=FORESLÅTT, DEAKTIVERT=FORKASTET
