# docs/openapi.yaml
@@ -49,7 +49,7 @@ paths:
       responses:
         201:
           description: >
-            - Opprettet et vedtak. Ved opprettelse vil det alltid ha `status=FORSLAG`
+            - Opprettet et vedtak. Ved opprettelse vil det alltid ha `status=FORESLÅTT`
             ettersom det minst vil være ett aksjonspunkt i `uløsteAksjonspunkter`
 
             - `potensielleStatuser` inneholder liste om potensielle statuser vedtaket kan havne i.
@@ -133,14 +133,14 @@ paths:
           description: >
             - Oppdatert vedtak etter at aksjonspunkt er løst, som gjenspeiles at det/de som ble løst nå er borte fra `uløsteAksjonspunkter`</br>
 
-            - Om `potensielleStatuser` ikke inneholder `INNVILGET` betyr det at vedtaket ikke kan innvilges ettersom en av løsningene på aksjonspuntene indikerer at det må bli `AVASLÅTT` eller `DEAKTIVERT`
+            - Om `potensielleStatuser` ikke inneholder `INNVILGET` betyr det at vedtaket ikke kan innvilges ettersom en av løsningene på aksjonspuntene indikerer at det må bli `AVASLÅTT` eller `FORKASTET`
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/KroniskSyktBarnSoknadResponse'
         409:
           description: >
-            - Om vedtaket har en annen status enn `FORSLAG`<br/>
+            - Om vedtaket har en annen status enn `FORESLÅTT`<br/>
 
   /kronisk-sykt-barn/{behandlingId}/innvilgelse:
     patch:
@@ -166,7 +166,7 @@ paths:
           description: >
             - Om det er uløste aksjonspunkt<br/>
 
-            - Om vedtaket før innvilgelse har en annen status enn `FORSLAG`<br/>
+            - Om vedtaket før innvilgelse har en annen status enn `FORESLÅTT`<br/>
 
             - Om løsningene på et eller fler aksjonspunkt indikerer at vedtaket ikke kan innvilges
   /kronisk-sykt-barn/{behandlingId}/avslag:
@@ -191,12 +191,12 @@ paths:
                 $ref: '#/components/schemas/KroniskSyktBarnSoknadResponse'
         409:
           description: >
-            - Om vedtaket før avslag har en annen status enn `FORSLAG`
-  /kronisk-sykt-barn/{behandlingId}/deaktivering:
+            - Om vedtaket før avslag har en annen status enn `FORESLÅTT`
+  /kronisk-sykt-barn/{behandlingId}/forkast:
     patch:
       tags:
         - Kronisk sykt barn - skriv
-      summary: Deaktivere vedtaket
+      summary: Forkaste vedtaket
       parameters:
         - name: behandlingId
           in: path
@@ -207,14 +207,14 @@ paths:
       responses:
         200:
           description: >
-            `status=DEAKTIVERT`
+            `status=FORKASTET`
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/KroniskSyktBarnSoknadResponse'
         409:
           description: >
-            - Om vedtaket før deaktivering har en annen status enn `FORSLAG`
+            - Om vedtaket før forkasting har en annen status enn `FORESLÅTT`
 components:
   schemas:
     KroniskSyktBarnSoknadRequest:
@@ -265,10 +265,10 @@ components:
           type: string
           description: Status på vedtaket
           enum:
-            - FORSLAG
+            - FORESLÅTT
             - INNVILGET
             - AVSLÅTT
-            - DEAKTIVERT
+            - FORKASTET
         potensielleStatuser:
           type: object
           properties:
@@ -278,7 +278,7 @@ components:
             AVSLÅTT:
               type: object
               properties: {}
-            DEAKTIVERT:
+            FORKASTET:
               type: object
               properties: {}
         uløsteAksjonspunkter:
@@ -327,10 +327,10 @@ components:
           type: string
           description: Status på vedtaket
           enum:
-            - FORSLAG
+            - FORESLÅTT
             - INNVILGET
             - AVSLÅTT
-            - DEAKTIVERT
+            - FORKASTET
         uløsteAksjonspunkter:
           type: object
           properties:
